fixed gap and padding form

--- a/styles/style.css
+++ b/styles/style.css
@@ -141,6 +141,8 @@ height: 39px;
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
+    padding-bottom: 80px;
+    margin: 0;
     }
 
 
